--- a/src/app/feature/hotel/list-hotels/hotels.component.html
+++ b/src/app/feature/hotel/list-hotels/hotels.component.html
@@ -27,5 +27,5 @@
       </tr>
       <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
     </table>
-    <div class="action"><button class="btnCreate" mat-raised-button >Create new hotel</button></div>
+    <div class="action"><button class="btnCreate" routerLink="/hotelCreation" mat-raised-button >Create new hotel</button></div>
   </div>
