--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <nav>
   <mat-toolbar>
-      <button routerLink="/hotels" mat-button>
+      <button class="btnNav" routerLink="/hotels" routerLinkActive="active-nav-item" mat-button>
       Hotels
       </button>
-    <button mat-button>
+    <button mat-button class="btnNav">
       Test
     </button>
   </mat-toolbar>
